Aggiunto inizio search
Aggiunto il form per il search del db

Co-Authored-By: Chiara Cintioni <83300887+chiara-cintioni@users.noreply.github.com>

--- a/RIBOflaskapp/templates/nav_bar.html
+++ b/RIBOflaskapp/templates/nav_bar.html
@@ -13,7 +13,7 @@
         <nav>
              <input type="checkbox" id="check">
                 <label for="check" class="checkbtn">
-                    <i class="fa-sharp fa-solid fa-bars"></i>
+                    <i class="fas fa-bars"></i>
                 </label>
             <label class="logo">RIBO</label>
             <ul>
@@ -26,7 +26,7 @@
                 </li>
                 <li><a href="#">Documentation<i class="fas fa-caret-down"></i></a>
                     <ul>
-                        <li><a href="<#>">Tutorial<i style="transform: rotate(-90deg);" class="fas fa-caret-down"></i></a>
+                        <li><a href="#">Tutorial<i style="transform: rotate(-90deg);" class="fas fa-caret-down"></i></a>
                             <ul>
                                 <li><a href="{{ url_for('s_tutorial') }}">Search</a></li>
                                 <li><a href="{{ url_for('d_tutorial') }}">Download</a></li>
