Controllo javascript per length e base pair
Implementato il javascript per controllare se la lunghezza e le base pair sono inserite correttamente

Co-Authored-By: Chiara Cintioni <83300887+chiara-cintioni@users.noreply.github.com>

--- a/RIBOflaskapp/static/css/style_unicam.css
+++ b/RIBOflaskapp/static/css/style_unicam.css
@@ -136,6 +136,10 @@ nav ul li a:hover{
     color: black;
 }
 
+nav ul li .dropdown-menu{
+    display: block;
+}
+
 nav ul ul{
     position: absolute;
     top: 80px;
