--- a/RIBOflaskapp/templates/nav_bar_unicam.html
+++ b/RIBOflaskapp/templates/nav_bar_unicam.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> RIBO </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style_unicam.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--<script src="https://kit.fontawesome.com/817de29756.js" ></script>-->
 </head>
@@ -24,10 +24,18 @@
             <ul>
                 <li><a class="active" href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="#">Search<i class="fas fa-caret-down"></i></a>
-                    <ul>
-                        <li><a href="{{ url_for('search') }}">Search</a></li>
-                        <li><a href="{{ url_for('download') }}">Download</a></li>
-                    </ul>
+                    <div class="dropdown-menu">
+                        <div class="row">
+                            <div class="col">
+                                <div class="list wrapper">
+                                    <ul class="list">
+                                        <li><a href="{{ url_for('search') }}">Search</a></li>
+                                        <li><a href="{{ url_for('download') }}">Download</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li><a href="#">Documentation<i class="fas fa-caret-down"></i></a>
                     <ul>
