--- a/RIBOflaskapp/templates/s_tutorial.html
+++ b/RIBOflaskapp/templates/s_tutorial.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Search tutorial{% endblock %}
 
 {% block content %}
 <h1>SEARCH tutorial!!!</h1>
