--- a/RIBOflaskapp/templates/base.html
+++ b/RIBOflaskapp/templates/base.html
@@ -13,6 +13,7 @@
     <!-- https://cdnjs.com/libraries/FileSaver.js -->
     <!-- https://github.com/eligrey/FileSaver.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
