--- a/RIBOflaskapp/templates/d_tutorial.html
+++ b/RIBOflaskapp/templates/d_tutorial.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Download tutorial{% endblock %}
 
 {% block content %}
 <h1>DOWNLOAD tutorial!!!</h1>
