--- a/RIBOflaskapp/templates/sources.html
+++ b/RIBOflaskapp/templates/sources.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Sources{% endblock %}
 
 {% block content %}
 <h1>Sources!</h1>
