--- a/RIBOflaskapp/templates/nav_bar.html
+++ b/RIBOflaskapp/templates/nav_bar.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Search<i class="fas fa-caret-down"></i></a>
                     <ul>
                         <li><a href="{{ url_for('search') }}">Search</a></li>
-                        <li><a href="{{ url_for('download') }}">Download</a></li>
+                        <li><a href="{{ url_for('search_result') }}">Download</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Documentation<i class="fas fa-caret-down"></i></a>
