Sistemata ricerca per rank
Aggiunte modifiche alla ricerca per rank.

Co-Authored-By: Chiara Cintioni <83300887+chiara-cintioni@users.noreply.github.com>

--- a/RIBOflaskapp/templates/search.html
+++ b/RIBOflaskapp/templates/search.html
@@ -67,7 +67,7 @@
             </select></td>
             <td><a>Taxon:</a></td>
             <td><input id="Taxon_id" type="text" name="rank_value" placeholder="Taxon" disabled></td>
-
+            <input type="hidden" id="Taxon_id" type="text" name="rank_value" value="">
             <button type="submit">Search</button>
             <button type="Reset" value="Reset">Reset</button>
         </form>
